--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,3 +6,6 @@
 body {
 	font-family: "Inter", sans-serif;
 }
+.material-symbols-rounded {
+	font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+}
