--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -114,3 +114,78 @@ h2 {
 	box-shadow: rgba(169, 194, 236, 0.25) 0px 4px 8px -2px,
 		rgba(31, 31, 32, 0.08) 0px 0px 0px 1px;
 }
+
+/* Dashboard section styling */
+.right-side-container {
+	width: 80%;
+}
+.nav-bar {
+	display: flex;
+	align-items: center;
+	/* width: 80%; */
+	justify-content: space-between;
+	background-color: #ededed;
+	padding: 10px;
+	border-bottom: 0.5px solid gainsboro;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px -15px 36px -28px inset;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
+		rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
+		rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+.nav-profile {
+	display: flex;
+	align-items: center;
+	width: 17%;
+	justify-content: space-between;
+}
+#close-open {
+	border: none;
+	cursor: pointer;
+}
+
+#close-open .material-symbols-rounded {
+	color: #2a3f54 !important;
+	font-size: large;
+	padding: none;
+	margin: none;
+	justify-content: center;
+	font-variation-settings: "FILL" 0, "wght" 500, "GRAD" 0, "opsz" 48;
+}
+#close-open .material-symbols-rounded:hover {
+	background-color: #2a3f54;
+	color: blanchedalmond !important;
+	border-radius: 50%;
+	padding: 2px;
+	font-size: medium;
+}
+#drop-down .material-symbols-rounded {
+	color: #2a3f54 !important;
+}
+.nav-profile > h3 {
+	font-size: 9px;
+	font-weight: 400;
+}
+.nav-profile-img {
+	height: 24px;
+	width: 24px;
+	border-radius: 50%;
+	border: 0.5px solid goldenrod;
+}
+.nav-profile-img > img {
+	height: inherit;
+	width: inherit;
+	object-fit: cover;
+	border-radius: 50%;
+	cursor: pointer;
+}
+#drop-down {
+	border: none;
+	cursor: pointer;
+}
+#drop-down .material-symbols-rounded:hover {
+	background-color: #2a3f54;
+	color: blanchedalmond !important;
+	border-radius: 50%;
+	/* padding: 2px; */
+	font-size: medium;
+}
