--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -338,12 +338,12 @@ h2 {
 }
 #show-total {
 	font-size: 8px;
-	/* padding: 5px; */
+	padding: 5px;
 	font-weight: 900;
 	background-color: #47c247;
 	color: #fff;
 	border: none;
-	border-radius: 5px;
+	border-radius: 4px;
 	cursor: pointer;
 }
 #show-total:hover {
@@ -359,16 +359,15 @@ h2 {
 	font-size: 10px;
 	padding: 5px;
 	width: 80px;
+	margin-right: 15px;
 	box-sizing: border-box;
+	align-items: center;
 	border: 0.5px solid #73879c;
 	border-radius: 4px;
 	background-repeat: no-repeat;
 	transition: width 0.4s ease-in-out;
 }
-.empty-div > input[type="text"]:focus {
-	width: 130px;
-	border: none !important;
-}
+
 .production-data-day {
 	margin: 0 auto;
 	width: 100%;
@@ -405,4 +404,14 @@ tr:nth-child(even) {
 }
 .total > span {
 	color: #47c247;
+}
+.income-rate {
+	font-size: 10px;
+	padding: 5px;
+	color: #fff;
+	background-color: #47c247;
+	border: none;
+	border-radius: 4px;
+	font-weight: 800;
+	cursor: pointer;
 }
