--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ body {
 	font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
 	color: #e5e5e5 !important;
 	margin-right: 10px;
-	font-size: small;
+	font-size: large`;
 }
 
 .container {
@@ -168,7 +168,7 @@ h2 {
 	height: 50px;
 	width: 50px;
 	border-radius: 50%;
-	border: 0.5px solid goldenrod;
+	border: 1px solid goldenrod;
 }
 .nav-profile-img > img {
 	height: inherit;
