--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -239,6 +239,7 @@ h2 {
 	margin-top: 10px;
 	font-family: "Alfa Slab One", cursive;
 	color: #73879c;
+	text-align: center;
 	font-size: 60px;
 }
 .empty-line {
@@ -255,8 +256,8 @@ h2 {
 
 /* Card design for the cow */
 .breed-card {
-	height: 250px;
-	width: 200px;
+	height: 500px;
+	width: 400px;
 	cursor: pointer;
 	/* background-color: red; */
 	border-radius: 5px;
@@ -274,8 +275,8 @@ h2 {
 	justify-content: space-between;
 }
 .cow-img {
-	height: 200px;
-	width: 200px;
+	height: 400px;
+	width: 400px;
 	border-radius: 5px;
 }
 .cow-img > img {
@@ -293,7 +294,7 @@ h2 {
 .icons-elements {
 	display: flex;
 	align-items: center;
-	margin-left: 10px;
+	margin-left: 20px;
 	text-align: right;
 
 	float: left;
@@ -310,22 +311,22 @@ h2 {
 }
 .icons-elements > p > span {
 	color: #47bb9c;
-	font-size: 10px;
+	font-size: 20px;
 	text-align: right;
 }
 .icons-elements > p {
 	color: #73879c;
-	font-size: 10px;
+	font-size: 20px;
 }
 .text-element > h6 {
-	font-size: 8px;
+	font-size: 16px;
 	color: gray;
 }
 .text-element > h6 > span {
 	color: rgb(3, 107, 9);
 }
 .dashboard-section > h1 {
-	font-size: 20px;
+	font-size: 40px;
 	margin-top: 10px;
 	font-weight: 500;
 	font-family: "Alfa Slab One", cursive;
