--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -339,8 +339,8 @@ h2 {
 	justify-content: space-between;
 }
 #show-total {
-	font-size: 8px;
-	padding: 5px;
+	font-size: 20px;
+	padding: 10px;
 	font-weight: 900;
 	background-color: #47c247;
 	color: #fff;
@@ -353,18 +353,18 @@ h2 {
 	color: #2a3f54;
 }
 .empty-div {
-	font-size: 9px;
+	font-size: 20px;
 	display: block;
-	margin-top: 10px;
+	margin-top: 20px;
 }
 .empty-div > input {
-	font-size: 10px;
-	padding: 5px;
-	width: 80px;
-	margin-right: 15px;
+	font-size: 20px;
+	padding: 10px;
+	width: 100px;
+	margin-right: 25px;
 	box-sizing: border-box;
 	align-items: center;
-	border: 0.5px solid #73879c;
+	border: 1px solid #73879c;
 	border-radius: 4px;
 	background-repeat: no-repeat;
 	transition: width 0.4s ease-in-out;
@@ -374,23 +374,26 @@ h2 {
 	margin: 0 auto;
 	width: 100%;
 	justify-content: center;
-
-	height: 600;
+	/* background-color: red; */
+	height: 1200;
 }
 table {
 	margin: auto;
 	border-collapse: collapse;
-	font-size: 10px;
+	font-size: 20px;
 	width: 80%;
-	margin-top: 20px;
+	margin-top: 30px;
 	border-radius: 5px !important;
 }
 td,
 th {
 	border: 1px solid #2a3f54;
 	text-align: left;
-	padding: 8px;
+	padding: 15px;
 	font-weight: 300;
+}
+th {
+	font-weight: 500;
 }
 
 tr:nth-child(even) {
@@ -401,14 +404,14 @@ tr:nth-child(even) {
 	justify-content: space-between;
 	width: 80%;
 	margin: auto;
-	margin-top: 10px;
-	font-size: 10px;
+	margin-top: 20px;
+	font-size: 20px;
 }
 .total > span {
 	color: #47c247;
 }
 .income-rate {
-	font-size: 10px;
+	font-size: 20px;
 	padding: 5px;
 	color: #fff;
 	background-color: #47c247;
