--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ body {
 	font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
 	color: #e5e5e5 !important;
 	margin-right: 10px;
-	font-size: large;
+	font-size: 30px;
 }
 
 .container {
